feat: add css for media tablet and mobile for blocks header start and about

--- a/shelter/sass/abstract/_constants.scss
+++ b/shelter/sass/abstract/_constants.scss
@@ -12,6 +12,8 @@ $color-button-hover-colored: #FDDCC4;
 
 
 $content-width: 1200px;
+$tabletmax-width: 1024px;
 $tablet-width: 768px;
+$tabletmin-width: 767px;
 $mobile-big-width: 414px;
 $mobile-small-width: 320px;
