--- a/shelter/sass/abstract/_placeholders.scss
+++ b/shelter/sass/abstract/_placeholders.scss
@@ -1,3 +1,11 @@
 %transition {
     transition: all .3s ease-out;
 }
+
+%font-prim {
+    font-family: 'Arial', sans-serif;
+}
+
+%font-add {
+    font-family: 'Georgia', sans-serif;
+}
