--- a/shelter/sass/layouts/_header.scss
+++ b/shelter/sass/layouts/_header.scss
@@ -1,18 +1,18 @@
 header {
-    padding: 30px 0;
+    padding: 30px 0 0 0;
     
 }
 .logo-subtitle {
     font-size: 1.3rem;
-    line-height: 15px;
+    line-height: 1.5rem;
     letter-spacing: 0.1em;
-    margin: 10px 0 0 0;
+    margin: 10px 0 0 5px;
     color: $color-heading-lite;
 }
 .logo-subtitle-lite {
     font-size: 1.3rem;
-    line-height: 15px;
+    line-height: 1.5rem;
     letter-spacing: 0.1em;
-    margin: 10px 0 0 0;
+    margin: 10px 0 0 5px;
     color: $color-link-hover-dark;
 }
