--- a/shelter/sass/component/_about.scss
+++ b/shelter/sass/component/_about.scss
@@ -1,18 +1,45 @@
 img.about__image {
-    margin: 0 120px 0 215px ;
+    padding: 0 0 0 175px;
+    width: 300px;
+    height: 408px;
+    @include media-tablet {
+        padding: 80px 68px 0 69px;
+    }
+    @include media-mobile {
+        padding: 20px 20px 0.4px;
+        width: 260px;
+        height: 353.6px;
+    }
 }
 .about__content {
-    margin: 25px 135px 14px 0;
+    padding: 14px 175px 14px 120px;
+    @include media-tablet {
+        padding: 0;
+    }
+    @include media-mobile {
+        text-align: center;
+    }
 }
 .about__title {
     margin: 0;
     padding: 0 60px 0 0;
-    
+    @include media-mobile {
+        padding: 0 0 25px 0;
+        @include font($height: 3.2rem, $size: 2.5rem);
+        letter-spacing: 0.06em;
+    }
 }
 .about__text {
-    margin-top: 25px;
+    margin: 25px 0 0 0;
     font-style: normal;
     font-weight: 400;
-    font-size: 15px;
-    line-height: 160%;  
+    font-size: 1.5rem;
+    line-height: 2.4rem;
+    @include media-tablet {
+        margin: 25px 4px 0 3px;
+    }
+    @include media-tablet {
+        margin: 0px 15px 22px;
+        text-align: justify;
+    }
 }
