--- a/shelter/sass/style.scss
+++ b/shelter/sass/style.scss
@@ -2,10 +2,12 @@
 @import "../node_modules/normalize.css/normalize.css";
 @import "abstract/constants";
 @import "abstract/placeholders";
+@import "abstract/mixins.scss";
 
 //Base
 @import "base/base";
 @import "base/buttons";
+@import "base/hamburger";
 
 //Layouts
 @import "layouts/wrapper";
