--- a/shelter/sass/component/_pets.scss
+++ b/shelter/sass/component/_pets.scss
@@ -6,6 +6,13 @@
     align-items: center;
     text-align: center;
     color: $color-heading-dark;
+    @include media-tablet {
+        margin: 0 154px 60px;
+    }
+    @include media-mobile {
+        margin: 0 auto;
+        @include font($height: 3.25rem, $size: 2.5rem);
+    }
 }
 .text {
     margin: 0;
