--- a/shelter/sass/layouts/_wrapper.scss
+++ b/shelter/sass/layouts/_wrapper.scss
@@ -50,17 +50,28 @@
     }
 }
 .pets__wrapper {
-    padding: 65px 0 100px 0;
+    padding: 80px 0 100px 0;
     text-align: center;
+    @include media-tablet {
+        padding: 80px 30px 100px;
+    }
+    @include media-mobile {
+        padding: 42px 10px;
+    }
 }
 .help__wrapper {
     text-align: center;
-    margin-top: 80px;
+    padding: 80px 0 73.4px 0;
+    @include media-tablet {
+        padding: 80px 69px 73.4px;
+    }
+    @include media-mobile {
+        padding: 0;
+    }
 }
 .donation__wrapper {
     display: flex;
     justify-content: space-between;
-    gap: 30px;
     padding: 80px 183px 100px 183px;
 }
 .footer__wrapper {
