--- a/shelter/sass/layouts/_wrapper.scss
+++ b/shelter/sass/layouts/_wrapper.scss
@@ -63,7 +63,7 @@
     text-align: center;
     padding: 80px 0 73.4px 0;
     @include media-tablet {
-        padding: 80px 69px 73.4px;
+        padding: 80px 69px 100px;
     }
     @include media-mobile {
         padding: 0;
@@ -73,6 +73,13 @@
     display: flex;
     justify-content: space-between;
     padding: 80px 183px 100px 183px;
+    @include media-tablet {
+        padding: 80px 132px 100px 131px;
+        flex-direction: column-reverse;
+    }
+    @include media-mobile {
+        padding: 0;
+    }
 }
 .footer__wrapper {
     display: flex;
