--- a/shelter/sass/style.css
+++ b/shelter/sass/style.css
@@ -254,7 +254,7 @@ h5 {
 }
 @media (max-width: 768px) {
   .help__wrapper {
-    padding: 80px 69px 73.4px;
+    padding: 80px 69px 100px;
   }
 }
 @media (max-width: 414px) {
@@ -267,6 +267,17 @@ h5 {
   display: flex;
   justify-content: space-between;
   padding: 80px 183px 100px 183px;
+}
+@media (max-width: 768px) {
+  .donation__wrapper {
+    padding: 80px 132px 100px 131px;
+    flex-direction: column-reverse;
+  }
+}
+@media (max-width: 414px) {
+  .donation__wrapper {
+    padding: 0;
+  }
 }
 
 .footer__wrapper {
@@ -492,34 +503,82 @@ footer {
   background: #F6F6F6;
 }
 
+@media (max-width: 768px) {
+  .donation__content {
+    padding: 0 62px 0 62px;
+  }
+}
+@media (max-width: 414px) {
+  .donation__content {
+    padding: 42px 10px 0 10px;
+  }
+}
+
 .donation__picture {
   display: flex;
   width: 505px;
   height: 261px;
   padding: 11px 30px 10px 0;
 }
+@media (max-width: 768px) {
+  .donation__picture {
+    padding: 60px 0 0 0;
+  }
+}
+@media (max-width: 414px) {
+  .donation__picture {
+    padding: 22px 30px 42px 30px;
+    width: 260px;
+    height: 135.2px;
+  }
+}
+
+.donation__image {
+  width: 100%;
+}
 
 .donation__title {
-  font-family: "Georgia";
+  font-size: 3.5rem;
   font-style: normal;
   font-weight: 400;
-  font-size: 35px;
-  line-height: 130%;
+  line-height: 4.5rem;
   letter-spacing: 0.06em;
   color: #545454;
   margin: 0;
   padding-right: 82px;
+}
+@media (max-width: 768px) {
+  .donation__title {
+    font-size: 2.5rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 3.2rem;
+    text-align: center;
+    padding-right: 0;
+  }
 }
 
 .donation__subtitle {
   font-family: "Georgia";
   font-style: normal;
   font-weight: 400;
-  font-size: 15px;
+  font-size: 1.5rem;
   line-height: 110%;
   letter-spacing: 0.06em;
   color: #545454;
   margin: 20px 0;
+}
+@media (max-width: 768px) {
+  .donation__subtitle {
+    margin: 20px 0;
+    letter-spacing: normal;
+  }
+}
+@media (max-width: 414px) {
+  .donation__subtitle {
+    margin: 0;
+    padding: 22px 14px 22px 13px;
+  }
 }
 
 .donation__text {
@@ -529,6 +588,13 @@ footer {
   font-size: 1.2rem;
   line-height: 1.8rem;
   color: #B2B2B2;
+}
+@media (max-width: 414px) {
+  .donation__text {
+    text-align: justify;
+    align-items: center;
+    margin: 20px 10px;
+  }
 }
 
 .link-button {
@@ -541,10 +607,19 @@ footer {
   font-family: "Georgia";
   font-style: normal;
   font-weight: 400;
-  font-size: 20px;
+  font-size: 2rem;
   line-height: 115%;
   letter-spacing: 0.06em;
   color: #545454;
+}
+@media (max-width: 414px) {
+  .link-button {
+    font-family: "Georgia", sans-serif;
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.7rem;
+  }
 }
 
 .link-button:hover {
@@ -558,6 +633,22 @@ footer {
   width: 30px;
   height: 23px;
   margin-right: 15px;
+}
+
+@media (max-width: 414px) {
+  .icon-text {
+    font-family: "Georgia", sans-serif;
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.7rem;
+  }
+}
+
+@media (max-width: 414px) {
+  .credit-card {
+    padding: 0 10px 0 9px;
+  }
 }
 
 .start-background {
@@ -911,7 +1002,7 @@ img.about__image {
 }
 @media (max-width: 414px) {
   .help__title {
-    margin: 42px 50px;
+    margin: 40px 50px 42px;
     font-size: 2.5rem;
     font-style: normal;
     font-weight: 400;
