--- a/shelter/sass/layouts/_wrapper.scss
+++ b/shelter/sass/layouts/_wrapper.scss
@@ -84,8 +84,16 @@
 .footer__wrapper {
     display: flex;
     justify-content: space-between;
-    padding-top: 20px;
+    margin: 40px 40px 0;
     width: 100%;
+    @include media-tablet {
+        margin: 15px 30px 0;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+    @include media-mobile {
+        margin:0 10px 0;
+    }
 }
 .navigation {
     display: flex;
