--- a/shelter/sass/base/_hamburger.scss
+++ b/shelter/sass/base/_hamburger.scss
@@ -7,7 +7,15 @@
     height: 0px;
     width: 100%;
 }
-
+%hamburger__linepets {
+    content: "";
+    display: inline-block;
+    position: absolute;
+    border: 1px solid #000000;
+    background: #000000;
+    height: 0px;
+    width: 100%;
+}
 .hamburger {
     display: none;
     //display: inline-block;
@@ -21,14 +29,24 @@
         @extend %hamburger__line;
         top: 0;
         left: 0;
+        @extend %hamburger__linepets;
+        top: 0;
+        left: 0;
     }
     &::after {
         @extend %hamburger__line;
+        bottom: 0;
+        left: 0;
+        @extend %hamburger__linepets;
         bottom: 0;
         left: 0;
     }
 }
 .hamburger__line {
     @extend %hamburger__line;
+    top: calc( 50% - 1px);
+}
+.hamburger__linepets {
+    @extend %hamburger__linepets;
     top: calc( 50% - 1px);
 }
