--- a/shelter/sass/component/_pets.scss
+++ b/shelter/sass/component/_pets.scss
@@ -14,6 +14,14 @@
         @include font($height: 3.25rem, $size: 2.5rem);
     }
 }
+.ourpets_pets__title {
+    @include media-tablet {
+        margin: 0 154px;
+    }
+    @include media-mobile {
+        margin: 0;
+    }
+}
 .text {
     margin: 0;
 }
@@ -22,4 +30,10 @@
     justify-content: space-between;
     margin: 0 auto;
     width: 28.3%;
+    @include media-tablet {
+        width: 48%;
+    }
+    @include media-mobile {
+        width: 93.75%;
+    }
 }
