--- a/shelter/sass/layouts/_header.scss
+++ b/shelter/sass/layouts/_header.scss
@@ -2,6 +2,9 @@ header {
     padding: 30px 0 0 0;
     
 }
+.heder__pets {
+    padding: 30px 0;
+}
 .logo-subtitle {
     font-size: 1.3rem;
     line-height: 1.5rem;
