--- a/shelter/sass/base/_hamburger.scss
+++ b/shelter/sass/base/_hamburger.scss
@@ -29,14 +29,28 @@
         @extend %hamburger__line;
         top: 0;
         left: 0;
-        @extend %hamburger__linepets;
-        top: 0;
-        left: 0;
     }
     &::after {
         @extend %hamburger__line;
         bottom: 0;
         left: 0;
+    }
+}
+.pets_hamburger {
+    display: none;
+    //display: inline-block;
+    position: relative;
+    width: 30px;
+    height: 22px;
+    @include media-tabletmin {
+        display: block;
+    }
+    &:before {
+        @extend %hamburger__linepets;
+        top: 0;
+        left: 0;
+    }
+    &::after {
         @extend %hamburger__linepets;
         bottom: 0;
         left: 0;
